--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -4,12 +4,14 @@
 @import  'core/mixins', 'core/functions', 'core/vars';
 
 .footer {
+
 }
 
 .footer-bg {
 	width: 100%;
 	height: 162px;
-	background: #f8f9fb url(../img/footer/bg.png) no-repeat;
+	background: url(../img/footer/bg.png) no-repeat;
+	// background-color: #f8f9fb;
 	background-size: auto 100%;
 	background-position: center;
 }
@@ -41,7 +43,21 @@
 	}
 
 	.tel {
+		position: relative;
+    padding-left: 25px;
 		color: #fff;
+
+		&:before {
+			content: "";
+	    position: absolute;
+	    left: 0;
+	    top: 50%;
+	    margin-top: -10px;
+	    width: 20px;
+	    height: 20px;
+	    background: url(../img/header/tel.png) no-repeat;
+	    background-size: 100%;
+		}
 	}
 }
 
@@ -59,7 +75,7 @@
 		padding-left: 5em;
 		height: 16px;
 		margin: 10px 0;
-		line-height: 1;
+		line-height: 1.25;
 		color: #8c9196;
 		font-size: 14px;
 
@@ -73,13 +89,13 @@
 }
 
 .footer-about {
-	width: 300px;
+	width: 190px;
 }
 
 .footer-qrcode {
 	@extend %clearfix;
 	float: left;
-	width: 200px;
+	width: 260px;
 	color: #599c29;
 }
 
@@ -93,7 +109,7 @@
 	}
 
 	img {
-		width: 70px;
+		width: 120px;
 	}
 }
 
