--- a/app/sass/doctor.scss
+++ b/app/sass/doctor.scss
@@ -22,7 +22,10 @@
 
 .doctor-ad {
 	img {
+		width: 272px;
+		height: 202px;
 		margin-bottom: 30px;
+		cursor: pointer;
 	}
 }
 
@@ -33,8 +36,22 @@
 	background: url(../img/doctor/search-bg.png) no-repeat;
 	background-size: auto 100%;
 	background-position: center;
+	
+	input::-webkit-input-placeholder,
+	textarea::-webkit-input-placeholder,
+	input:-moz-placeholder,
+	textarea:-moz-placeholder,
+	input::-moz-placeholder,
+	textarea::-moz-placeholder,
+	input:-ms-input-placeholder,
+	textarea:-ms-input-placeholder {
+	  color: #CACACA;
+	}
 
 	h3 {
+    line-height: 1;
+    height: 44px;
+    padding-top: 5px;
 		font-size: 22px;
 		color: #2E9DD2;
 		text-align: center;
@@ -88,6 +105,7 @@
 		text-align: center;
 		border-radius: 0 4px 4px 0;
 		color: #fff;
+		cursor: pointer;
 	}
 }
 
@@ -132,14 +150,16 @@
 	
 	& > img {
 		position: absolute;
-		top:30px;
+		top: 20px;
 		left: 20px;
-		width: 76px;
-		height: 76px;
+		width: 66px;
+		height: 66px;
+		border-radius: 66px;
 	}
 
 	h5 {
-		margin-bottom: 15px;
+		padding-top: 4px;
+		margin-bottom: 10px;
 		line-height: 1;
 		font-size: 18px;
 		color: #333;
@@ -209,11 +229,12 @@
 		}
 	}
 
-	p {
+	& > div {
 		text-align: justify;
 		line-height: 22px;
 		font-size: 14px;
 		color: #777;
+		word-wrap: break-word;
 	}
 
 	ul {
@@ -285,7 +306,7 @@
 		padding: 20px 0 15px;
 		font-size: 18px;
 		color: #666;
-		border-bottom: 1px solid #666;
+		border-bottom: 1px solid #d8d8d8;
 		text-align: center;
 	}
 
@@ -330,5 +351,6 @@
 		font-size: 12px;
 		color: #2E78D2;
 		text-align: center;
+		display: block;
 	}
 }
