--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -4,6 +4,9 @@
 
 @import 'indexBanner';
 
+.index {
+	min-height: 1000px;
+}
 
 // 关于
 .index-about {
@@ -64,6 +67,7 @@
 		padding-right: 26px;
 		font-size: 12px;
 		text-align: justify;
+		word-wrap: break-word;
 	}
 }
 
@@ -270,14 +274,18 @@
 	background-position: center;
 }
 
-
-.index-frame {
-	position: fixed;
-	top: 50%;
-	right: 0;
-	margin-top: -114px;
+.guarantee-more {
+	width: 342px;
+	height: 82px;
+	line-height: 56px;
+	margin: 0 auto;
+	margin-top: 30px;
+	margin-bottom: -30px;
+	text-align: center;
 	font-size: 20px;
-	// color: #fff;
-	z-index: 100;
+	color: #fff;
+	background: url(../img/index/guarantee-more.png) no-repeat;
+	background-size: 100%;
 	cursor: pointer;
+	display: block;
 }
