--- a/app/sass/medical.scss
+++ b/app/sass/medical.scss
@@ -6,12 +6,6 @@
 
 }
 
-// .medical-banner {
-	// background-image: url(../img/medical/banner.jpg);
-// }
-
-
-
 // 案例
 .medical-case {
 	position: relative;
@@ -37,6 +31,24 @@
 			color: #fff;
 		}
 	}
+
+	img {
+
+	}
+
+	h5 {
+		@include ellipsisMore();
+		position: absolute;
+		bottom: 70px;
+		width: 290px;
+		padding: 0 15px;
+		line-height: 36px;
+		font-size: 12px;
+		color: #fff;
+		background-color: rgba(0, 0, 0, .7);
+		text-align: center;
+		display: none;
+	}
 }
 
 .medical-case-content {
@@ -46,6 +58,44 @@
 
 	.swiper-slide {
 		cursor: pointer;
+    margin: 0 auto;
+    padding: 0 5px;
+
+  	&:hover {
+			& > h5 {
+				display: block;
+			}
+		}
+
+    img {
+    	width: 290px;
+    	height: 220px;
+    }
+	}
+	.swiper-pagination-bullet {
+		opacity: 1;
+		background: #9AD4EF;
+	}
+
+	.swiper-pagination-bullet-active {
+		background: #2E9DD2;
+	}
+
+	.swiper-button-next, .swiper-button-prev {
+		top: auto;
+    bottom: 0px;
+    left: 50%;
+    margin-left: -136px;
+    width: 36px;
+    height: 36px;
+    margin-bottom: 2px;
+    background: url(../img/swiper-prev.png) no-repeat;
+    background-size: 100%;
+	}
+
+	.swiper-button-next {
+		margin-left: 100px;
+		background-image: url(../img/swiper-next.png);
 	}
 }
 
@@ -76,7 +126,7 @@
 	width: 25%;
 	height: 178px;
 	display: inline-block;
-
+	
 	&:nth-child(1) {
   	.medical-step-left {
 			&:before {
@@ -85,6 +135,10 @@
   	}
   	.medical-step-right {
 	  	background-image: url(../img/medical/case-bg-1.png)
+  	}
+
+  	p {
+			// background
   	}
   }
   &:nth-child(2) {
@@ -96,6 +150,9 @@
   	.medical-step-right {
 	  	background-image: url(../img/medical/case-bg-2.png)
   	}
+  	p {
+			background-image: url(../img/medical/02.png);
+  	}
   }
   &:nth-child(3) {
   	.medical-step-left {
@@ -106,7 +163,11 @@
   	.medical-step-right {
 	  	background-image: url(../img/medical/case-bg-3.png)
   	}
+  	p {
+			background-image: url(../img/medical/03.png);
+  	}
   }
+  
   &:nth-child(4) {
   	.medical-step-left {
 			&:before {
@@ -115,6 +176,9 @@
   	}
   	.medical-step-right {
 	  	background: url(../img/medical/case-bg-4.png)
+  	}
+  	p {
+			background-image: url(../img/medical/04.png);
   	}
   }
 }
@@ -157,8 +221,11 @@
 	}
 
 	p {
+		width: 56px;
+		height: 50px;
 		line-height: 1;
-		font-size: 50px;
+		font-size: 0;
+		background: url(../img/medical/01.png) no-repeat;
 	}
 }
 
