--- a/app/sass/news.scss
+++ b/app/sass/news.scss
@@ -3,7 +3,6 @@
 @import  'core/mixins', 'core/functions', 'core/vars';
 
 .news {
-
 	.container {
 		padding: 40px 0 0;
 	}
@@ -16,9 +15,10 @@
 	height: 288px;
 	margin-right: 20px;
 	margin-bottom: 20px;
-	background: #FFFFFF;
+	background: #FFF;
 	box-shadow: 0 1px 4px 0 rgba(3,57,83,0.15);
 	border-radius: 5px;
+	cursor: pointer;
 
 	img {
 		width: 100%;
@@ -82,6 +82,7 @@
 		font-size: 14px;
 		color: #666;
 		text-align: justify;
+		word-wrap: break-word;
 		border-bottom: 1px dashed #E2E2E2;
 	}
 
@@ -91,5 +92,6 @@
 		font-size: 12px;
 		color: #2E78D2;
 		text-align: center;
+		cursor: pointer;
 	}
 }
