--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -14,7 +14,7 @@ $headerLogoH: 48px;
 }
 
 .header-header {
-	background-color: #2e9dd2;
+	background-color: rgb(0, 154, 221);
 }
 
 .header-header-content {
